--- a/certhq/users/templates/users/register.html
+++ b/certhq/users/templates/users/register.html
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
