--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                    {{user.username}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="">Logout</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     <a class="dropdown-item" href="">Profile</a>
                 </div>
             </li>
