Fixed failing test

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
 
-    <title>CertHQ</title>
+    <title>{% block title %}CertHQ{% endblock title %}</title>
 </head>
 <body>
 
