--- a/certhq/certificates/templates/certificates/certificate_list.html
+++ b/certhq/certificates/templates/certificates/certificate_list.html
@@ -1,6 +1,8 @@
 
 {% extends 'base.html' %}
 
+{%block title%}CertHQ - Certificates{%endblock title%}
+
 {% block content %}
     <h2>Certificates</h2>
 	<ul>
