Wire up link to certificates view

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                     Certificates 
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="">List</a>
+                    <a class="dropdown-item" href="{% url 'certificates' %}">List</a>
                     <a class="dropdown-item" href="">Create</a>
                 </div>
             </li>
