Add a link for login

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,12 @@
                 </div>
             </li>
         </ul>
+        {% else %}
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        </ul>
         {% endif %}
     </div>
 </nav>
