EB related updates

--- a/certhq/certificates/templates/certificates/certificate_detail.html
+++ b/certhq/certificates/templates/certificates/certificate_detail.html
@@ -10,5 +10,6 @@
     <li>{{ object.subject }}</li>
     <li>{{ object.issuer }}</li>
     <li>{{ object.sha256_fingerprint }}</li>
+    <li>{{ object.not_after }}</li>
 	</ul>
 {% endblock %}
