Update cert details

--- a/certhq/certificates/templates/certificates/certificate_detail.html
+++ b/certhq/certificates/templates/certificates/certificate_detail.html
@@ -4,7 +4,7 @@
 {%block title%}CertHQ - Certificate Detail{%endblock title%}
 
 {% block content %}
-    <h2>Certificates</h2>
+  <h2>Certificate Details: {{object.cn}}</h2>
 	<ul>
     <li>{{ object.cn }}</li>
     <li>{{ object.subject }}</li>
