--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        {% if user.is_authenticated %}
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink"
@@ -36,10 +37,10 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="{% url 'certificates' %}">List</a>
-                    <a class="dropdown-item" href="">Create</a>
                 </div>
             </li>
         </ul>
+        {% endif %}
         {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
@@ -55,6 +56,9 @@
         </ul>
         {% else %}
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Sign up</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
