--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                    {{user.username}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                    <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a>
                     <a class="dropdown-item" href="">Profile</a>
                 </div>
             </li>
@@ -57,10 +57,10 @@
         {% else %}
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Sign up</a>
+                <a class="nav-link" href="{% url 'account_signup' %}">Sign up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
             </li>
         </ul>
         {% endif %}
