--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,18 @@
-
 {% extends 'base.html' %}
+{% load socialaccount %}
 
 {%block title%}CertHQ - Welcome{%endblock title%}
 
 {% block content %}
 <p>Welcome to CertHQ</p>
+{% if user.is_authenticated %}
+<p>Hi {{ user.username }}
+<p><a href="{% url 'account_logout' %}">Log out</a>
+{% else %}
+<p><a href="{% url 'account_signup' %}">Sign Up</a></p>
+<p><a href="{% url 'account_login' %}">Log In </a></p>
+<p><a href="{% provider_login_url 'google' %}">Log In with Gmail</a></p>
+{% endif %}
 {% endblock %}
 
 
